syntax = "proto3";

package book;

service BookService {
    rpc getBooks (getBooksRequest) returns (getBooksResponse) {}
    rpc getBookById (getBookByIdRequest) returns (getBookByIdResponse) {}
    rpc createBook (createBookRequest) returns (createBookResponse) {}
}


// createBook
message createBookRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string author = 4;
}

message createBookResponse {
    repeated Book books = 1;
}


// getBooks
message getBooksRequest{
    int32 id = 1;
    string aaa = 2;
}
message getBooksResponse {
    repeated Book books = 1;
}

message Book {
    int32 id =1;
    string title = 2;
    string description = 3;
    string author = 4;   
}

// getBookById

message getBookByIdRequest {
    int32 id = 1;
}

message getBookByIdResponse {
    Book book =1;
}